# YOLO-from-scratch

./: pyproject.toml
src/: darknet.py  train.py  utils.py
src/models/: backbone.py  head.py  neck.py  yolo.py
src/utils/: loss.py
tests/: test_models.py
